--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta name="twitter:image" content="https://deverify.com/assets/logo.png" />
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/application.css">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico"/>
 </head>
 <body>
   <div class="container">
